fix overflow of sneakpeek

--- a/site/index.css
+++ b/site/index.css
@@ -46,6 +46,7 @@ ul {
 .header {
   display: flex;
   flex-wrap: wrap;
+  overflow-x: hidden;
 }
 
 .title {
@@ -132,6 +133,7 @@ ul {
 .header-sneakpeek {
   position: relative;
   width: 100%;
+  height: 100%;
   transform: translateX(+24%);
 }
 
@@ -230,7 +232,6 @@ ul {
   }
 
   .header-sneakpeek {
-    width: 40%;
     transform: none;
     margin: 4em 4em;
   }
